Fix save patterns modal header alignment

--- a/src/extensions/block-patterns/styles/style.scss
+++ b/src/extensions/block-patterns/styles/style.scss
@@ -3,6 +3,11 @@
 
 .coblocks-block-patterns__modal {
 
+	.components-modal__header-heading {
+		display: flex;
+		align-items: center;
+	}
+
 	.components-base-control__field {
 		margin-bottom: $grid-unit-20;
 	}
